added suggest photo form, controller, mailer

--- a/app/views/businesses/_gallery.html.erb
+++ b/app/views/businesses/_gallery.html.erb
@@ -1,84 +1,99 @@
-     
-        <div class="container" style="padding:50px;">
-            <div class="msg"><span class="glyphicon glyphicon-ok"></span> Gallery</div>
-            <div class="col-lg-12">
-                <ul id="myTab" class="nav nav-tabs nav-justified">
-                    <li class="active"><a href="#service-one" data-toggle="tab"><i class="fa fa-camera fa-4x"></i></a>
-
-                    </li>
-                    <li class=""><a href="#service-two" data-toggle="tab"><i class="fa fa-film fa-4x"></i></a>
-                    </li>
-                </ul>
-
-                <div id="myTabContent" class="tab-content">
-                    <div class="tab-pane fade active in" id="service-one"><br><br>
-                        <div class="row"> 
-                          <% unless @business.videos.blank? %>                         
-                            <div id="links" class="text-center" >
-                                <% @business.photos.each do |photo| %>
-                                    <a href="<%= image_path photo.source_url %>" title="Banana" data-gallery>
-                                        <%= image_tag photo.source_url, class: "image_gallery"%>
-                                    </a>
-                                <% end %>                                                              
-                            </div>
-                          <% else %>
-                           <div class="alert alert-info text-center" role="alert"><%= @business.name %> has no photos</div>
-                          <% end %>  
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="service-two"><br><br>
-                        <!-- Blog Post Video -->
-                        <div class="row">
-                        <% unless @business.videos.blank? %>
-                            <!-- <div class="col-md-2"></div>  -->
-                            <div class="col-md-4"> 
-                            <% @business.videos.each do |video| %>                               
-                                <iframe width="360" height="215" src="<%= video.source %>" frameborder="0" allowfullscreen></iframe> 
-                            <% end %>
-                            </div>
-                        <% else %>
-                           <div class="alert alert-info text-center" role="alert"><%= @business.name %> has no videos</div>
-                        <% end %>
-                        </div>
-                    </div>                   
-                </div>
+<div class="container" style="padding:50px;">
+    <div class="msg"><span class="glyphicon glyphicon-ok"></span> Gallery</div>
+    <div class="col-lg-12">
+        <ul id="myTab" class="nav nav-tabs nav-justified">
+            <li class="active"><a href="#service-one" data-toggle="tab"><i class="fa fa-camera fa-4x"></i></a>
+        </li>
+        <li class=""><a href="#service-two" data-toggle="tab"><i class="fa fa-film fa-4x"></i></a>
+    </li>
+</ul>
+<div id="myTabContent" class="tab-content">
+    <div class="tab-pane fade active in" id="service-one"><br><br>
+        <div class="row">
+            <% unless @business.photos.blank? %>
+            <div id="links" class="text-center" >
+                <% @business.photos.each do |photo| %>
+                <a href="<%= image_path photo.source_url %>" title="Banana" data-gallery>
+                    <%= image_tag photo.source_url, class: "image_gallery"%>
+                </a>
+                <% end %>
             </div>
+            <% else %>
+            <div class="alert alert-info text-center" role="alert"><%= @business.name %> has no photos</div>
+            <% end %>
+            <% if current_user %>
+            <button type="button" class="btn-link btn-default navbar-btn pull-right" style="margin-right:43%;" data-toggle="modal" data-target="#UpdloadPhotoModal">
+            <%= image_tag "symbol_upload" %>
+            </button>
+            <% end %>
         </div>
-        
-
-
-
-
-        <div id="blueimp-gallery" class="blueimp-gallery">
-            <!-- The container for the modal slides -->
-            <div class="slides"></div>
-            <!-- Controls for the borderless lightbox -->
-            <h3 class="title"></h3>
-            <a class="prev">‹</a>
-            <a class="next">›</a>
-            <a class="close">×</a>
-            <a class="play-pause"></a>
-            <ol class="indicator"></ol>
-            <!-- The modal dialog, which will be used to wrap the lightbox content -->
-            <div class="modal fade">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" aria-hidden="true">&times;</button>
-                            <h4 class="modal-title"></h4>
-                        </div>
-                        <div class="modal-body next"></div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default pull-left prev">
-                                <i class="glyphicon glyphicon-chevron-left"></i>
-                                Previous
-                            </button>
-                            <button type="button" class="btn btn-primary next">
-                                Next
-                                <i class="glyphicon glyphicon-chevron-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
+    </div>
+    <div class="tab-pane fade" id="service-two"><br><br>
+        <!-- Blog Post Video -->
+        <div class="row">
+            <% unless @business.videos.blank? %>
+            <!-- <div class="col-md-2"></div>  -->
+            <div class="col-md-4">
+                <% @business.videos.each do |video| %>
+                <iframe width="360" height="215" src="<%= video.source %>" frameborder="0" allowfullscreen></iframe>
+                <% end %>
             </div>
+            <% else %>
+            <div class="alert alert-info text-center" role="alert"><%= @business.name %> has no videos</div>
+            <% end %>
         </div>
+    </div>
+</div>
+</div>
+</div>
+
+<div id="blueimp-gallery" class="blueimp-gallery">
+<!-- The container for the modal slides -->
+<div class="slides"></div>
+<!-- Controls for the borderless lightbox -->
+<h3 class="title"></h3>
+<a class="prev">‹</a>
+<a class="next">›</a>
+<a class="close">×</a>
+<a class="play-pause"></a>
+<ol class="indicator"></ol>
+<!-- The modal dialog, which will be used to wrap the lightbox content -->
+<div class="modal fade">
+<div class="modal-dialog">
+<div class="modal-content">
+    <div class="modal-header">
+        <button type="button" class="close" aria-hidden="true">&times;</button>
+        <h4 class="modal-title"></h4>
+    </div>
+    <div class="modal-body next"></div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-default pull-left prev">
+        <i class="glyphicon glyphicon-chevron-left"></i>
+        Previous
+        </button>
+        <button type="button" class="btn btn-primary next">
+        Next
+        <i class="glyphicon glyphicon-chevron-right"></i>
+        </button>
+    </div>
+</div>
+</div>
+</div>
+</div>
+
+
+<!-- Suggest photo in Modal -->
+<div class="modal fade" id="UpdloadPhotoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+<div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <h4 class="modal-title" id="myModalLabel">Suggest</h4>
+</div>
+<div class="modal-body">
+    <br><br>
+    <%= render :partial => "suggest_photos/new", :locals => {:suggest_photo => SuggestPhoto.new, id: @business.id} %>
+</div>
+</div>
+</div>
+</div>
