--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,15 @@
     config/locales/en.yml. For more see:
     https://github.com/calebthompson/title#usage
   %>
+    <%= favicon_link_tag 'YPIcon.ico' %>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>Yellow Pages</title>
+    
+    <title>Yellow Page</title>
      
     <!-- Bootstrap Core CSS -->
     <%= stylesheet_link_tag "bootstrap.min.css", media: "all" %>
