--- a/app/views/layouts/_sign_in.html.erb
+++ b/app/views/layouts/_sign_in.html.erb
@@ -22,7 +22,8 @@
                       <%= link_to "Forgot your password?", new_password_path(resource_name) %>  
                   <% end -%>    
                   <%= f.input :remember_me, as: :boolean if devise_mapping.rememberable? %>        
-                </div>                         
+                </div> 
+                <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
               </div>
 
             </div><br><br>
