--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,14 @@
           <span class="icon-bar"></span>
         </button>
         <%= link_to "YP", root_path, class: "navbar-brand"%>
+        <%= form_tag("/search/index", method: "get", class: "navbar-form navbar-left" ) do %>
+           <div class="form-group center">
+            <%= text_field_tag :query, params[:query], class: "form-control",  style: "width:400px;", placeholder: "Business name" %>
+            </div>
+           <%= button_tag(type: "submit", class: "btn btn-primary") do %>
+                <i class="fa fa-search"></i>
+           <% end %>
+        <% end %>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
