Google map directions fixed

--- a/app/views/businesses/_details.html.erb
+++ b/app/views/businesses/_details.html.erb
@@ -36,7 +36,7 @@
                     <abbr title="Hours">Tomorrow</abbr>: 10:00 - 22:00  
                 </p>
 
-                 <%= link_to "Directions", directions_show_path(id: @business.id) %>
+                <a href = "https://maps.google.com/maps?saddr=&daddr=<%= @business.latitude %>, <%= @business.longitude %>&dirflg=d" > Directions</a>
 
                 <%= rating_for @business, "rate", :star => 5 %>  
                 <ul class="list-unstyled list-inline list-social-icons">
