added elascticsearch general search and advanced form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
     <%= stylesheet_link_tag "modern-business.css", media: "all" %>
     <%= stylesheet_link_tag "font-awesome.min.css", media: "all" %>
     <%= stylesheet_link_tag "application", media: "all" %>
+    <%= stylesheet_link_tag "typeahead", media: "all" %>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag "//blueimp.github.io/Gallery/css/blueimp-gallery.min.css", media: "all" %>
     <%= stylesheet_link_tag "bootstrap-image-gallery.min", media: "all" %>
