--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,12 +12,38 @@
         <%= link_to "YP", root_path, class: "navbar-brand"%>
         <%= form_tag("/search/index", method: "get", class: "navbar-form navbar-left" ) do %>
            <div class="form-group center">
-            <%= text_field_tag :query, params[:query], class: "form-control",  style: "width:400px;", placeholder: "Business name" %>
+            <%= text_field_tag :query, params[:query], class: "form-control",  style: "width:400px;", id: "business_search", placeholder: "Business name", autocomplete: "off" %>
             </div>
            <%= button_tag(type: "submit", class: "btn btn-primary") do %>
                 <i class="fa fa-search"></i>
            <% end %>
-        <% end %>
+        <% end %>   
+
+        <button type="button" style="margin-top:8px;" class="btn btn-primary" data-toggle="collapse" data-target="#filter-panel">
+            <i class="fa fa-cog"></i> Advanced Search
+        </button>
+
+        <div id="filter-panel" class="collapse filter-panel" style="padding-left:8%;;margin-top:1%;">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                  <%= form_tag("/search/index", method: "get", class: "form-inline" ) do %>
+                     <div class="form-group">
+                           <%= collection_select :category, :category_id, Category.all, :id, :name, {prompt: "Select Category"}, {class: "form-control"} %>
+                        </div><!-- form group [search] -->
+                        <div class="form-group">
+                           <%= text_field_tag :city, params[:city],class: "form-control input-sm", placeholder: "City" %>                                          
+                            <%= text_field_tag :address, params[:address],class: "form-control input-sm", placeholder: "Adress" %>                                   
+                        </div> <!-- form group [order by] --> 
+                        <div class="form-group"> 
+                            <button type="submit" class="btn btn-default filter-col">
+                                 <i class="fa fa-search"></i> Search 
+                            </button>  
+                        </div>
+                   <% end %>
+                </div>
+            </div>
+        </div>
+
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -64,6 +90,15 @@
 
 
 
+
+
+<script type="text/javascript">
+  $ ->
+  $('#business_search').typeahead
+    name: "search"
+    remote: "/search/autocomplete?query=%QUERY"
+
+</script>
 
 
 
