modified show businesses

--- a/app/views/businesses/_details.html.erb
+++ b/app/views/businesses/_details.html.erb
@@ -1,58 +1,66 @@
-        <!-- Content Row -->
-        <div class="row">
-            <!-- Map Column -->
-            <div class="col-md-4">
-                <% if @business.logo.blank? %>
-                    <%= image_tag "nologo.png", width: "100%",:class => "img-responsive"%>
-                 <% else %>
-                  <%= image_tag @business.logo_url, :class => "img-responsive"%>                  
-                 <% end %>
-            </div>
-            <!-- Contact Details Column -->
-            <div class="col-md-8">
-             
-             <div id="map">
-                  <div id="geolocation"></div>
-             </div>
-
-                <h3><%= @business.name %></h3>  
-                <%= link_to "Suggest an Update", suggest_edits_path(id: @business.id) %>
-                <br>
-
-                <p>
-                    3481 Melrose Place<br>Beverly Hills, CA 90210<br>
-                </p>
-                <% @business.phones.each do |phone| %>
-                <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone"><%= phone.phone_type %></abbr>: <%= phone.phone_number %></p>
-                <% end %>
-                <p><i class="fa fa-envelope-o"></i> 
-                    : <a href="<%= @business.email %>"><%= @business.email %></a>
-                </p>
-                <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours"> Today</abbr>: Active 
-                </p>
-                <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours">Tomorrow</abbr>: 10:00 - 22:00  
-                </p>
-
-                <a href = "https://maps.google.com/maps?saddr=&daddr=<%= @business.latitude %>, <%= @business.longitude %>&dirflg=d" > Directions</a>
-
-                <%= rating_for @business, "rate", :star => 5 %>  
-                <ul class="list-unstyled list-inline list-social-icons">
-                    <li>
-                        <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-linkedin-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
-                    </li>
-                </ul>   
-            </div>
+<!-- Content Row -->
+<div class="row">
+    <!-- Map Column -->
+    <div class="col-md-4">
+        <% if @business.logo.blank? %>
+        <%= image_tag "nologo.png", width: "100%",:class => "img-responsive"%>
+        <% else %>
+        <%= image_tag @business.logo_url, :class => "img-responsive"%>
+        <% end %>
+    </div>
+    <!-- Contact Details Column -->
+    <div class="col-md-8">
+        
+        <!--          <div id="map">
+            <div id="geolocation"></div>
         </div>
-        <!-- /.row -->
+        -->
+        <h3><%= @business.name %></h3>
+        <%= link_to "Suggest an Update", suggest_edits_path(id: @business.id) %>
+        <br>
+        <h5><%= @business.description %></h5>
+        <p>
+            3481 Melrose Place<br>Beverly Hills, CA 90210<br>
+        </p>
+        <% @business.phones.each do |phone| %>
+        <p><i class="fa fa-phone"></i>
+        <abbr title="Phone"><%= phone.phone_type %></abbr>: <%= phone.phone_number %></p>
+        <% end %>
+        <p><i class="fa fa-envelope-o"></i>
+            : <a href="<%= @business.email %>"><%= @business.email %></a>
+        </p>
+        <p><i class="fa fa-clock-o"></i>
+        <abbr title="Hours"> Today</abbr>:
+        <% if @status.blank? %>
+            <b style="padding:5px;background-color:#808080;color:white"> UNKNOWN</b>
+        <% elsif @status == true%>
+            <b style="padding:5px;background-color:green;color:white"> OPEN</b>
+        <% else %>
+            <b style="padding:5px;background-color:red;color:white"> CLOSE</b>
+        <% end %>
+    </p>
+     <!--    <p><i class="fa fa-clock-o"></i>
+        <abbr title="Hours">Tomorrow</abbr>: 10:00 - 22:00
+        </p> -->
+        <a href = "https://maps.google.com/maps?saddr=&daddr=<%= @business.latitude %>, <%= @business.longitude %>&dirflg=d" > Directions</a>
+        <%= rating_for @business, "rate", :star => 5 %>
+        <ul class="list-unstyled list-inline list-social-icons">
+            <% unless @business.facebook.blank? %>
+                <li>
+                    <a href="<%= @business.facebook %>"><i class="fa fa-facebook-square fa-2x"></i></a>
+                </li>
+            <% end %>
+            <% unless @business.instagram.blank? %>
+                <li>
+                    <a href="#"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                </li>
+            <% end %>
+            <% unless @business.twitter.blank? %>
+                <li>
+                    <a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
+                </li>
+            <% end %>
+        </ul>
+    </div>
+</div>
+<!-- /.row -->
