--- a/app/views/suggest_businesses/new.html.erb
+++ b/app/views/suggest_businesses/new.html.erb
@@ -1,4 +1,6 @@
-<br><br>             
+<%= render "layouts/header" %>
+<br><br><br><br><br><br>
+
   <div class="main">
     <h3>Suggest your <a href="#">business</a></h3>
       <div class="login-or">
