--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
         <%= link_to "YP", root_path, class: "navbar-brand"%>
         <%= form_tag("/search/index", method: "get", class: "navbar-form navbar-left" ) do %>
            <div class="form-group center">
-            <%= text_field_tag :query, params[:query], class: "form-control",  style: "width:400px;", id: "business_search", placeholder: "Business name", autocomplete: "off" %>
+            <%= text_field_tag :query, params[:query], class: "form-control", require: true,  style: "width:400px;", id: "business_search", placeholder: "Business name", autocomplete: "off" %>
             </div>
            <%= button_tag(type: "submit", class: "btn btn-primary") do %>
                 <i class="fa fa-search"></i>
@@ -28,16 +28,17 @@
                 <div class="panel-body">
                   <%= form_tag("/search/index", method: "get", class: "form-inline" ) do %>
                      <div class="form-group">
-                           <%= collection_select :category, :category_id, Category.all, :id, :name, {prompt: "Select Category"}, {class: "form-control"} %>
+                           <%= collection_select :category, :category_id, Category.all, :id, :name, {prompt: "Select Category"}, {class: "form-control", required: true} %>
                         </div><!-- form group [search] -->
                         <div class="form-group">
                            <%= text_field_tag :city, params[:city],class: "form-control input-sm", placeholder: "City" %>                                          
                             <%= text_field_tag :address, params[:address],class: "form-control input-sm", placeholder: "Adress" %>                                   
                         </div> <!-- form group [order by] --> 
                         <div class="form-group"> 
-                            <button type="submit" class="btn btn-default filter-col">
-                                 <i class="fa fa-search"></i> Search 
-                            </button>  
+                          <%= button_tag(type: "submit", class: "btn btn-default filter-col") do %>
+                            <i class="fa fa-search"></i> Search 
+                          <% end %>
+                            
                         </div>
                    <% end %>
                 </div>
