--- a/app/views/layouts/_sign_in.html.erb
+++ b/app/views/layouts/_sign_in.html.erb
@@ -4,12 +4,14 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Sign up</h4>
+        <h4 class="modal-title" id="myModalLabel">Sign in</h4>
       </div>
       <div class="modal-body">
         <br><br>          
-          <div class="main">
-              <h3>Please Log In, or <a href="#">Sign Up</a></h3>
+          <div class="main">  
+               <%= link_to  user_omniauth_authorize_path(:google_oauth2) do %>
+               <img src="http://techulus.com/buttons/gplus.png", width="100%" height="50px" />
+               <% end %>
               <div class="login-or">
                 <hr class="hr-or">
                 <span class="span-or">or</span>
@@ -22,8 +24,7 @@
                       <%= link_to "Forgot your password?", new_password_path(resource_name) %>  
                   <% end -%>    
                   <%= f.input :remember_me, as: :boolean if devise_mapping.rememberable? %>        
-                </div> 
-                <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
+                </div>                
               </div>
 
             </div><br><br>
