--- a/app/views/businesses/_details.html.erb
+++ b/app/views/businesses/_details.html.erb
@@ -31,7 +31,7 @@
         </p>
         <p><i class="fa fa-clock-o"></i>
         <abbr title="Hours"> Today</abbr>:
-        <% if @status.blank? %>
+        <% if @status == [] %>
             <b style="padding:5px;background-color:#808080;color:white"> UNKNOWN</b>
         <% elsif @status == true%>
             <b style="padding:5px;background-color:green;color:white"> OPEN</b>
