--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,7 @@
                         </div> <!-- form group [order by] --> 
                         <div class="form-group"> 
                           <%= button_tag(type: "submit", class: "btn btn-default filter-col") do %>
-                            <i class="fa fa-search"></i> Search 
+                            <i class="fa fa-search"></i>
                           <% end %>
                             
                         </div>
@@ -70,12 +70,21 @@
                   Profile
                 <% end %>
               </li>
+              <% if current_user.admin? %>
+                <li>
+                  <%= link_to rails_admin_path  do %>
+                    <i class="fa fa-lock"></i>
+                    Administration
+                  <% end %>
+                </li> 
+              <% end %>
               <li>
                 <%= link_to destroy_user_session_path, :method => :delete  do %>
                   <i class="fa fa-sign-out"></i>
                   Sign out
                 <% end %>
               </li>
+              
             </ul>
           </li>
       <% end %>
