--- a/app/views/businesses/_details.html.erb
+++ b/app/views/businesses/_details.html.erb
@@ -11,10 +11,10 @@
     <!-- Contact Details Column -->
     <div class="col-md-8">
         
-        <!--          <div id="map">
+        <div id="map">
             <div id="geolocation"></div>
         </div>
-        -->
+       
         <h3><%= @business.name %></h3>
         <%= link_to "Suggest an Update", suggest_edits_path(id: @business.id) %>
         <br>
