--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,10 +26,12 @@
 }
 
 #geolocation{
- width: 355px;
- height: 200px;
+ width: 320px;
+ height: 210px;
  float: right;
  margin-right: 100px;
+ margin-top: 35px;
+ margin-left: 40px;
 }
 
 .image_business{
