modified suggest end update, profile

--- a/app/views/profiles/_update_user.html.erb
+++ b/app/views/profiles/_update_user.html.erb
@@ -14,6 +14,7 @@
                                   
       <div class="">
          <%= f.input_field :logo, autofocus: true, :class => 'form-control no-border' %>
+         <%= f.input_field :name, autofocus: true, :class => 'form-control no-border' %>
          <%= f.input_field :email, required: true, autofocus: true, :class => 'form-control no-border' %>
       </div><hr>                                   
       
