--- a/app/views/suggest_edits/index.html.erb
+++ b/app/views/suggest_edits/index.html.erb
@@ -27,11 +27,14 @@
     <%= f.input :zip_code, input_html: { value: @business_suggest_edit.zip_code }, :class => 'form-control no-border' %>
     
     <br><h5 class="text-warning">PHONE NUMBER</h5>
-    <%= f.input :business_tel, input_html: { value: @business_suggest_edit.phones.first.phone_number }, :class => 'form-control no-border' %>
-    <%# f.input :fax_number, input_html: { value: @business_suggest_edit.phones.first }, :class => 'form-control no-border' %>
+    <% @business_suggest_edit.phones.each do |phone|%>
+      (<%= phone.phone_type %>)
+      <%= f.input :business_tel, input_html: { value: phone.phone_number }, :class => 'form-control no-border' %>
+    <% end %>
+    <%= f.input :business_tel, :class => 'form-control no-border', input_html: { placeholder: "type, number" } %>
     
-    <!-- <br><h5 class="text-warning">OPENING HOURS</h5> -->
-    <%# f.input :opening_hours, input_html: { placeholder: "sogest for some working days" }, :class => 'form-control no-border' %>
+    <br><h5 class="text-warning">OPENING HOURS</h5>
+    <%= f.input :opening_hours, input_html: { placeholder: "sogest for some working days" }, :class => 'form-control no-border' %>
     
     <br><h5 class="text-warning">WEBSITES</h5>
     <%= f.input :website, input_html: { value: @business_suggest_edit.website }, :class => 'form-control no-border' %>
