--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -31,7 +31,7 @@
                     <div class="tab-pane fade active in" id="service-one">
                         <div class="panel panel-default alert alert-warning alert-dismissible">
                           <div class="panel-body">
-                                 <% @user_creator.each do |comment| %>
+                                <% @user_creator.each do |comment| %>
                                 <h3 style="color:#3366ff"><%= Business.find(comment.thread.commontable_id).name %></h3>
                                 <h5><%= Business.find(comment.thread.commontable_id).address %></h5>
                                 <p><i class="fa fa-comments-o" aria-hidden="true"></i>
@@ -39,6 +39,15 @@
                                 <hr>
                                 <% end %>
                           </div>
+                                  <div class="row text-center">
+            <div class="col-lg-12">
+                <ul class="pagination">
+                    <div class="digg_pagination">  
+                        <%= will_paginate @user_creator, :container => false %>
+                    </div>
+                </ul>
+            </div>
+        </div>
                         </div>                     
                     </div>
                     <div class="tab-pane fade" id="service-two">
