--- a/app/views/suggest_businesses/new.html.erb
+++ b/app/views/suggest_businesses/new.html.erb
@@ -11,7 +11,7 @@
         <div class="form-inputs">
           <%= f.input :name, label: "Business name",required: true, autofocus: true %>
           <% if current_user %>
-            <%= f.input :email, placeholder: current_user.email ,required: true %>
+            <%= f.input :email, :input_html => { value: current_user.email },required: true %>
           <% else %>
             <%= f.input :email, required: true %>        
           <% end %>
@@ -20,8 +20,9 @@
         
         </div><br><br>
         <div class="modal-footer">
+          <%= link_to  "Cancel", root_path , html_options: { class: "btn" } %>   
           <%= f.button :submit, "Send", class: "btn-primary" %>   
-          </div>      
+        </div>      
       </div>                       
    </div>   
  <% end %>
