--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,13 +24,14 @@
     <%= stylesheet_link_tag "modern-business.css", media: "all" %>
     <%= stylesheet_link_tag "font-awesome.min.css", media: "all" %>
     <%= stylesheet_link_tag "application", media: "all" %>
-    <%= stylesheet_link_tag "typeahead", media: "all" %>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag "//blueimp.github.io/Gallery/css/blueimp-gallery.min.css", media: "all" %>
     <%= stylesheet_link_tag "bootstrap-image-gallery.min", media: "all" %>
     
+     <script src="/assets/jquery.js" type="text/javascript"></script>
+    <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
+    
     <% javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.9.3/typeahead.min.js" %>
 
     
 
