--- a/app/views/businesses/_details.html.erb
+++ b/app/views/businesses/_details.html.erb
@@ -32,9 +32,9 @@
         </p>
         <p><i class="fa fa-clock-o"></i>
         <abbr title="Hours"> Today</abbr>:
-        <% if @status == [] %>
+        <% if @business.open == [] %>
             <b style="padding:5px;background-color:#808080;color:white"> UNKNOWN </b>
-        <% elsif @status == true %>
+        <% elsif @business.open %>
             <b style="padding:5px;background-color:green;color:white"> OPEN </b>
         <% else %>
             <b style="padding:5px;background-color:red;color:white"> CLOSE </b>
