--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,22 +25,17 @@
     <%= stylesheet_link_tag "font-awesome.min.css", media: "all" %>
     <%= stylesheet_link_tag "application", media: "all" %>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag "//blueimp.github.io/Gallery/css/blueimp-gallery.min.css", media: "all" %>
     <%= stylesheet_link_tag "bootstrap-image-gallery.min", media: "all" %>
     <%= stylesheet_link_tag "jquery.rateyo.css", media: "all" %>
-
-
-    <script src="/assets/jquery.js" type="text/javascript"></script>
-    <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
-    
-    <% javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag "blueimp-gallery.min.css", media: "all" %>
 
     
-
-   
-    <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
-
-      
+    <!-- inside javascript -->
+    <%= javascript_include_tag 'jquery.js', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'jquery_ujs.js', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'jquery.rateyo.js', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'jquery.blueimp-gallery.min.js', 'data-turbolinks-track' => true %>
+     
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -57,8 +52,5 @@
     <%= yield %>
     <%= render "javascript" %>
 
-    <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script> 
-    <script src="jquery.js"></script>
-    <script src="jquery.rateyo.js"></script>
   </body>
 </html>
