--- a/app/views/businesses/_details.html.erb
+++ b/app/views/businesses/_details.html.erb
@@ -37,7 +37,7 @@
         <% elsif @business.open %>
             <b style="padding:5px;background-color:green;color:white"> OPEN </b>
         <% else %>
-            <b style="padding:5px;background-color:red;color:white"> CLOSE </b>
+            <b style="padding:5px;background-color:red;color:white"> CLOSED </b>
         <% end %>
     </p>
      <!--    <p><i class="fa fa-clock-o"></i>
