--- a/app/views/businesses/open.html.erb
+++ b/app/views/businesses/open.html.erb
@@ -7,13 +7,15 @@
 		<div class="col-lg-12">
 			<h1 class="page-header">Searching ....
 			</h1>
+						<li> <%=link_to "Open", search_index_path %> </li>
+
 	</div>
 </div>
 
 <% if @open.any? %>
-  <h4 style="margin-left:8%;">Businesses Open</h4>
+  <h4 style="margin-left:8%;">Open Businesses</h4>
 	<% @open.each do |business| %>
-		<% if business.open %>
+		<% if business.open == true %>
 	<div class="row" >	
 			<hr>
 			<div class="col-xs-6 col-md-3">
