--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -26,71 +26,8 @@
 <%= render "gallery" %>
 <hr>
 <hr>
+<%= render "reviews" %>
 
-<div class="container" style="padding:50px;">
-    <div class="msg"><span class="glyphicon glyphicon-ok"></span> Reviews</div>
-    <div class="col-lg-12">
-        <ul id="myTab" class="nav nav-tabs nav-justified">
-            <li class="active"><a href="#service-3" data-toggle="tab">Comment</i></a>
-        </li>
-        <li class=""><a href="#service-4" data-toggle="tab"> Rating</a> </a>
-    </li>
-</ul>
-<div id="myTabContent" class="tab-content">
-    <div class="tab-pane fade active in" id="service-3"><br><br>
-        <div class="row">
-            <%= commontator_thread(@business) %>
-        </div>
-    </div>
-    <div class="tab-pane fade" id="service-4"><br><br>
-        <div class="row">
-         <% if current_user %>
-            <div class="well">
-                <h4>Leave a Rate:</h4>
-                <form role="form">
-                    <div class="form-group">
-                        <div id="rateUser"></div>
-                    </div>
-                    <button id="getRating" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-        <% else %>
-            <div class="well">
-                <h4>You should signed in to leave a rate</h4>
-            </div
-        <% end %>
-            <hr>
-
-            <% @rating.each do |rate| %>
-                <div class="media">
-                    <a class="pull-left" href="#">
-                        <img class="media-object" src="http://placehold.it/64x64" alt="">
-                    </a>
-                    <div class="media-body">
-                        <h4 class="media-heading"><%= User.find(rate.user_id).email %>
-                            <small><%= rate.created_at %></small>
-                        </h4>
-                        <div id="rateYo<%= rate.id %>"></div>
-                    </div>
-                
-
-                <script type="text/javascript">
-                    $(function () {
-                     
-                      $("#rateYo<%= rate.id %>").rateYo({
-                        rating: <%= rate.score %>,
-                        readOnly: true
-                      });
-
-                    });
-                </script>
-              </div>
-            <% end %>
-          </div>
-
-        
-        <!-- <div class="alert alert-info text-center" role="alert"> No reviews</div>                            -->
-    </div>
 </div>
 </div>
 </div>
@@ -122,33 +59,3 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2Thur_PgWUQvdiGx2PDiUy2CKVkqTB2M&callback=initMap" async defer></script>
     <script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.9/src/markerclusterer_packed.js"></script>
 </div>
-
-
-<script type="text/javascript">
-               $(function () {
-
-                  $("#rateUser").rateYo({
-                    rating: 0
-                  })
-                 
-                });
-
-
-                $(function () {
-             
-                  var $rateUser = $("#rateUser").rateYo();
-                 
-                  $("#getRating").click(function () {
-                 
-                    /* get rating */
-                    var rating = $rateUser.rateYo("rating");
-                    $.ajax({
-                        url: '/rating/index',
-                        type: 'GET',
-                        data: { score: rating, business_id: <%= @business.id %> }
-                    });
-              
-                  });
-                 
-                });
-</script>
