--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,14 +27,15 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag "bootstrap-image-gallery.min", media: "all" %>
     <%= stylesheet_link_tag "jquery.rateyo.css", media: "all" %>
-    <%= stylesheet_link_tag "blueimp-gallery.min.css", media: "all" %>
+    <%# stylesheet_link_tag "blueimp-gallery.min.css", media: "all" %>
+    <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
 
     
     <!-- inside javascript -->
     <%= javascript_include_tag 'jquery.js', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'jquery_ujs.js', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'jquery.rateyo.js', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'jquery.blueimp-gallery.min.js', 'data-turbolinks-track' => true %>
+    <%# javascript_include_tag 'jquery.blueimp-gallery.min.js', 'data-turbolinks-track' => true %>
      
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -51,6 +52,7 @@
     <%= render "flashes" -%>
     <%= yield %>
     <%= render "javascript" %>
-
+   
+    <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script> 
   </body>
 </html>
